# geodb

./: .gitignore  PRD_PROGRESS_REPORT.md  README.md  pyproject.toml  requirements.txt  update_ui.py
gemini_artifacts/: codebase_report.md  implementation_plan.md  llm_cost_estimate.md  task.md
geodb/: cli.py  config.py  schema.py
geodb/agent_factory/: __main__.py  cli.py  config.py  llm_client.py  llm_cloud_client.py
geodb/agent_factory/analysis/: file_inspector.py  io_mapper.py  output_analyzer.py
geodb/agent_factory/creation/: agent_creator.py  code_generator.py  prompt_builder.py  step_coder.py  step_planner.py  validator_builder.py
geodb/agent_factory/knowledge/: auto_generator.py  fallback.py  loader.py
geodb/agent_factory/maps/: data_extractor.py  renderer.py  template.py
geodb/agent_factory/runtime/: agent_runner.py  agent_spec.py  output_comparator.py  sandbox.py  step_runner.py  validator.py
geodb/agent_factory/storage/: agent_store.py
geodb/agent_factory/viz/: data_extractor.py  map_generator.py
geodb/db/: connection.py  reader.py  writer.py
geodb/ingest/: kml_parser.py  router.py  tif_parser.py
geodb/nl_search/: __main__.py  cli.py  config.py  executor.py  file_inspector.py  formatter.py  llm_client.py  location.py  pipeline.py
geodb/nl_search/agents/: coder.py  verifier.py
geodb/transform/: __main__.py  cli.py  config.py  llm_client.py
geodb/transform/agents/: coder.py  fixer.py  planner.py  verifier.py  visualizer.py
geodb/transform/examples/: clip_raster_to_polygon.json  (+8 more)
geodb/web/: __main__.py  app.py  runner.py
(+19 files in other folders)
